--- a/CalculoPrecoVenda/CalculoPrecoVenda/MainWindow.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/MainWindow.xaml
@@ -8,45 +8,70 @@
         Title="Cálculo do Preço de Venda" Width="1360" Height="768" 
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize">
+    <Window.Resources>
+        <local:NumberFormatter x:Key="myNumberFormatter"/>
+    </Window.Resources>
+   
     <StackPanel Margin="5">
-        <!--<Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>-->
-
         <Label Content="Cálculo de Preço de Venda" FontFamily="SegoeUI" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center" Margin="5" Grid.Row="0" />
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0,5,5" >
 
-            <GroupBox Name="grpFornecedor" Header="Fornecedor" Height="240" Width="300" Margin="10,0,20,0">
+            <GroupBox Name="grpFornecedor" Header="Fornecedor" Height="240" Width="250" Margin="10,0,20,0">
                 <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
                     <RadioButton x:Name="radForEstrangeiro" Content="Estrangeiro"  IsChecked="True"/>
                     <RadioButton x:Name="radForNacional" Content="Nacional"  IsChecked="False"/>
                     <RadioButton x:Name="radForZfm" Content="ZFM"  IsChecked="False"/>
                     <RadioButton x:Name="radProducaoPropria" Content="Produção Própria"  IsChecked="False"/>
                     <Label Content="Situação Especial" Margin="10,5,0,0"/>
-                    <Line Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="300" Margin="5"/>
+                    <Line Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="220" Margin="5"/>
                     <CheckBox x:Name="chkMicroempresa" Content="Microempresa" IsChecked="False" Margin="10,0,0,0"/>
                 </StackPanel>
             </GroupBox>
 
-            <GroupBox Name="grpProduto" Header="Produto" Height="240" Width="300" Margin="0,0,20,0">
-                <StackPanel>
-                    <RadioButton x:Name="radProdEstrangeiro" Content="Estrangeiro"  IsChecked="True"/>
-                    <RadioButton x:Name="radProdNacional" Content="Nacional"  IsChecked="False"/>
-                    <Label Content="Situação Especial" Margin="10,5,0,0"/>
-                    <Line Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="300" Margin="5"/>
-                    <CheckBox Name="chkItensFcp" Content="Item com FCP" IsChecked="False" Margin="10,5,0,0"/>
-                    <CheckBox Name="chkCorredor" Content="Corredor de Importação" IsChecked="False" Margin="10,5,0,0"/>
-                    <Label Content="Tipo Especial" Margin="10,5,0,0"/>
-                    <Line Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="300" Margin="5"/>
-                    <CheckBox x:Name="chkMotores" Content="Motores" IsChecked="False" Margin="10,0,0,0"/>
-                    <CheckBox x:Name="chkPecas" Content="Peças" IsChecked="False" Margin="10,0,0,0"/>
-                </StackPanel>
+            <GroupBox Name="grpProduto" Header="Produto" Height="240" Width="520" Margin="0,0,20,0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="60"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <RadioButton Grid.Row="0" Grid.Column="0" x:Name="radProdEstrangeiro" Content="Estrangeiro"  IsChecked="True" Margin="10,5,0,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="0" x:Name="radProdNacional" Content="Nacional"  IsChecked="False" Margin="10,5,0,0"/>
+
+                    <Label Grid.Row="3" Grid.Column="0" Content="Tipo Especial" Margin="10,5,0,5"/>
+                    <Line Grid.Row="4" Grid.Column="0" Stroke="DarkBlue" StrokeThickness="2" X1="0" X2="130"/>
+                    <CheckBox Grid.Row="4" Grid.Column="0" x:Name="chkMotores" Content="Motores" IsChecked="False" Margin="10,5,0,0"/>
+                    <CheckBox Grid.Row="5" Grid.Column="0" x:Name="chkPecas" Content="Peças" IsChecked="False" Margin="10,5,0,0"/>
+                    
+                    <Label Grid.Row="3" Grid.Column="1" Content="Situação Especial" Margin="10,5,0,5"/>
+                    <Line Grid.Row="4" Grid.Column="1" Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="200"/>
+                    <CheckBox Grid.Row="4" Grid.Column="1" Name="chkItensFcp" Content="Item com FCP" IsChecked="False" Margin="10,5,0,0"/>
+                    <CheckBox Grid.Row="5" Grid.Column="1" Name="chkCorredor" Content="Corredor de Importação" IsChecked="False" Margin="10,5,0,0"/>
+                    <CheckBox Grid.Row="6" Grid.Column="1" Name="chkImportadoZfm" Content="Importado para ZFM" IsChecked="False" Margin="10,5,0,0"/>
+                    
+                    <Label Grid.Row="0" Grid.Column="1" Content="NCM" VerticalAlignment="Center"/>
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="txtNcm" BorderThickness="2" Margin="0,0,10,0" />
+                    <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Content="NOME DA NCM" VerticalAlignment="Center"/>
+                    <Button Grid.Row="1" Grid.Column="2">
+                        <StackPanel>
+                            <Image Source="Images/find.ico" Stretch="None"/>
+                        </StackPanel>
+                    </Button>
+                </Grid>
             </GroupBox>
 
-            <GroupBox x:Name="grpCliente" Header="Ciente" Height="240" Width="670" HorizontalAlignment="Left">
+            <GroupBox x:Name="grpCliente" Header="Ciente" Height="240" Width="500" HorizontalAlignment="Left">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"/>
@@ -57,17 +82,17 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="80"/>
                         <ColumnDefinition Width="145*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="UF:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="0" Grid.Column="0" Margin="0,6"/>
-                    <ComboBox Name="lstUF" Margin="10,2,30,2"  Grid.Row="0" Grid.Column="1"/>
-                    <CheckBox Name="chkClienteZfm" Content="Venda na ZFM" IsEnabled="False" Grid.Row="0" Grid.Column="2" Margin="10,5,0,0" Grid.ColumnSpan="3"/>
-                    <RadioButton Name="radPessoaJurídica" Content="Pessoa Jurídica" IsChecked="False" Grid.Row="1" Grid.Column="1" Margin="10,10,0,0"/>
-                    <RadioButton Name="radPessoaFisica" Content="Pessoa Física" IsChecked="True" Grid.Row="1" Grid.Column="2" Margin="10,10,0,0" Grid.ColumnSpan="3"/>
-                    <CheckBox Name="chkContribuinte" Content="PJ Não Contribuinte / Órgão Público" IsEnabled="False" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" Margin="10,10,0,0" />
-                    <Label Content="Items da FCP" Margin="10,0,0,0" Grid.Row="3" Grid.Column="1"/>
-                    <TextBox Name="txtItemsFcp" BorderThickness="2" Margin="10,0,0,0" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4"/>
+                    <Label Grid.Row="0" Grid.Column="0" Content="UF:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10,0,10,0"/>
+                    <ComboBox Grid.Row="0" Grid.Column="1" Name="lstUF" VerticalAlignment="Center" />
+                    <CheckBox Grid.Row="0" Grid.Column="2" Name="chkClienteZfm" Content="Venda na ZFM" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Name="radPessoaJurídica" Content="Pessoa Jurídica" IsChecked="False" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <RadioButton Grid.Row="1" Grid.Column="2" Name="radPessoaFisica" Content="Pessoa Física" IsChecked="True" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Name="chkContribuinte" Content="PJ Não Contribuinte / Órgão Público" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0" />
+                    <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Content="Items com FCP na UF" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Name="txtItemsFcp" BorderThickness="2" Margin="10,5,0,0"/>
                 </Grid>
             </GroupBox>
         </StackPanel>
@@ -81,7 +106,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
+            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
                       VerticalAlignment="Top" HorizontalAlignment="Left">
                 <Grid Margin="5,0,0,0">
                     <Grid.RowDefinitions>
@@ -115,9 +140,9 @@
                     <Label Grid.Row="7" Grid.Column="0" Content="(+) Capatazia"  VerticalAlignment="Center"/>
                     <Label Grid.Row="8" Grid.Column="0" Content="(+) Contr FTI"  VerticalAlignment="Center"/>
                     <Label Grid.Row="9" Grid.Column="0" Content="(+) IOF Cartão"  VerticalAlignment="Center"/>
-                    <Line  Grid.Row="10" Grid.Column="3" Stroke="DarkBlue" StrokeThickness="3"/>
+                    <Line  Grid.Row="10" Grid.Column="2" Stroke="DarkBlue" StrokeThickness="3" X1="0" X2="150"/>
                     <Label Grid.Row="10" Grid.Column="0" Content="Custo de Reposição"  VerticalAlignment="Center"/>
-                    <TextBox Grid.Row="0" Grid.Column="2" Name="txtValorNF" VerticalAlignment="Center" Margin="5,0"/>
+                    <TextBox Grid.Row="0" Grid.Column="2" Name="txtValorNF" VerticalAlignment="Center" Margin="5,0" Text="{Binding ElementName=txtValorNF, Path=Text, Converter={StaticResource myNumberFormatter}, ConverterParameter='c'}"/>
                     <TextBox Grid.Row="1" Grid.Column="2" Name="txtIcms"  VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="2" Grid.Column="2" Name="txtValorLiquido"  VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="3" Grid.Column="2" Name="txtFrete"  VerticalAlignment="Center" Margin="5,0"/>
@@ -163,19 +188,19 @@
                     <Label Grid.Row="4" Grid.Column="0" Content="(-) Impostos Federais"  VerticalAlignment="Center"/>
                     <Label Grid.Row="5" Grid.Column="0" Content="(-) Despesas Operacionais"  VerticalAlignment="Center"/>
                     <Label Grid.Row="6" Grid.Column="0" Content="(=) Lucro Líquido"  VerticalAlignment="Center"/>
-                    
+
                     <TextBox Grid.Row="0" Grid.Column="1" Name="txtPercLucro1" VerticalAlignment="Center" Margin="30,0"/>
                     <TextBox Grid.Row="0" Grid.Column="2" Name="txtPercLucro2" VerticalAlignment="Center" Margin="30,0"/>
                     <TextBox Grid.Row="0" Grid.Column="3" Name="txtPercLucro3" VerticalAlignment="Center" Margin="30,0"/>
                     <TextBox Grid.Row="0" Grid.Column="4" Name="txtPercLucro4" VerticalAlignment="Center" Margin="30,0"/>
                     <TextBox Grid.Row="0" Grid.Column="5" Name="txtPercLucro5" VerticalAlignment="Center" Margin="30,0"/>
-                    
+
                     <TextBox Grid.Row="1" Grid.Column="1" Name="txtValorSugerido1" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="1" Grid.Column="2" Name="txtValorSugerido2" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="1" Grid.Column="3" Name="txtValorSugerido3" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="1" Grid.Column="4" Name="txtValorSugerido4" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="1" Grid.Column="5" Name="txtValorSugerido5" VerticalAlignment="Center" Margin="5,0"/>
-                    
+
                     <TextBox Grid.Row="2" Grid.Column="1" Name="txtCustoReposicao1" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="2" Grid.Column="2" Name="txtCustoReposicao2" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="2" Grid.Column="3" Name="txtCustoReposicao3" VerticalAlignment="Center" Margin="5,0"/>
@@ -209,12 +234,15 @@
 
                 </Grid>
             </GroupBox>
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                <Button Content="Teste" Width="100" Height="30"/>
-
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="0,30,10,0" Click="btnImpostosFederais_Click"/>
+                <Button Name="btnIcms" Content="ICMS sobre a Venda" Width="120" Height="35" VerticalAlignment="Top" Margin="20,30,10,0" Click="btnIcms_Click_1"/>
+                <Button Name="btnDespOp" Content="Despesas Operacionias" Width="120" Height="35" VerticalAlignment="Top" Margin="20,30,10,0" Click="btnDespOp_Click_2"/>
+                <Button Name="btnCálcular" Content="CALCULAR" Width="120" Height="35" VerticalAlignment="Top" Margin="240,30,10,0"/>
 
             </StackPanel>
-           
+
+
         </Grid>
     </StackPanel>
 </Window>
