--- a/CalculoPrecoVenda/CalculoPrecoVenda/App.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/App.xaml
@@ -2,13 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CalculoPrecoVenda"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View\MainWindow.xaml">
+            
     
     <Application.Resources>
         <ResourceDictionary>
+            <local:Settings x:Key="Settings"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/ShinyBlue.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+       
     </Application.Resources>
+    
 </Application>
