--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CalculoPrecoVenda.MainWindow"
+﻿<Window x:Class="CalculoPrecoVenda.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
     <Window.Resources>
         <local:NumberFormatter x:Key="myNumberFormatter"/>
     </Window.Resources>
-   
+
     <StackPanel Margin="5">
         <Label Content="Cálculo de Preço de Venda" FontFamily="SegoeUI" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center" Margin="5" Grid.Row="0" />
 
@@ -45,7 +45,7 @@
                         <ColumnDefinition Width="250"/>
                         <ColumnDefinition Width="60"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <RadioButton Grid.Row="0" Grid.Column="0" x:Name="radProdEstrangeiro" Content="Estrangeiro" Margin="10,5,0,0"/>
                     <RadioButton Grid.Row="1" Grid.Column="0" x:Name="radProdNacional" Content="Nacional" Margin="10,5,0,0"/>
 
@@ -53,13 +53,13 @@
                     <Line Grid.Row="4" Grid.Column="0" Stroke="DarkBlue" StrokeThickness="2" X1="0" X2="130"/>
                     <CheckBox Grid.Row="4" Grid.Column="0" x:Name="chkMotores" Content="Motores" Margin="10,5,0,0"/>
                     <CheckBox Grid.Row="5" Grid.Column="0" x:Name="chkPecas" Content="Peças" Margin="10,5,0,0"/>
-                    
+
                     <Label Grid.Row="3" Grid.Column="1" Content="Situação Especial" Margin="10,5,0,5"/>
                     <Line Grid.Row="4" Grid.Column="1" Stroke="DarkBlue" StrokeThickness="2" X1="5" X2="200"/>
                     <CheckBox Grid.Row="4" Grid.Column="1" Name="chkItensFcp" Content="Item com FCP" Margin="10,5,0,0"/>
                     <CheckBox Grid.Row="5" Grid.Column="1" Name="chkCorredor" Content="Corredor de Importação" Margin="10,5,0,0"/>
                     <CheckBox Grid.Row="6" Grid.Column="1" Name="chkImportadoZfm" Content="Importado para ZFM" Margin="10,5,0,0"/>
-                    
+
                     <Label Grid.Row="0" Grid.Column="1" Content="NCM" VerticalAlignment="Center"/>
                     <TextBox Grid.Row="1" Grid.Column="1" Name="txtNcm" BorderThickness="2" Margin="0,0,10,0" />
                     <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Content="NOME DA NCM" VerticalAlignment="Center"/>
@@ -100,13 +100,14 @@
         <Grid  Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="300"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3"
                       VerticalAlignment="Top" HorizontalAlignment="Left">
                 <Grid Margin="5,0,0,0">
                     <Grid.RowDefinitions>
@@ -241,15 +242,17 @@
 
                 </Grid>
             </GroupBox>
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-                <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="0,30,10,0" Click="btnImpostosFederais_Click"/>
-                <Button Name="btnIcms" Content="ICMS sobre a Venda" Width="120" Height="35" VerticalAlignment="Top" Margin="20,30,10,0" Click="btnIcms_Click_1"/>
-                <Button Name="btnDespOp" Content="Desp Operacionias" Width="120" Height="35" VerticalAlignment="Top" Margin="20,30,10,0" Click="btnDespOp_Click_2"/>
-                <Button Name="btnCálcular" Content="CALCULAR" Width="120" Height="35" VerticalAlignment="Top" Margin="240,30,10,0"/>
-
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0">
+                <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="0,10,10,0" Click="btnImpostosFederais_Click"/>
+                <Button Name="btnIcms" Content="ICMS sobre a Venda" Width="120" Height="35" VerticalAlignment="Top" Margin="20,10,10,0" Click="btnIcms_Click_1"/>
+                <Button Name="btnDespOp" Content="Desp Operacionias" Width="120" Height="35" VerticalAlignment="Top" Margin="20,10,10,0" Click="btnDespOp_Click_2"/>
+                <Button Name="btnCálcular" Content="CALCULAR" Width="120" Height="35" VerticalAlignment="Top" Margin="240,10,10,0"/>
             </StackPanel>
-
-
+            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+                <Button Name="btnCadastroUf" Content="Cadastro UF" Width="120" Height="35" VerticalAlignment="Top" Margin="0,0,10,0" Click="btnCadastroUf_Click"/>
+                <Button Name="btnCadastroNcm" Content="Cadastro NCM" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnCadastroNcm_Click"/>
+                <Button Name="btnSobre" Content="Sobre" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnSobre_Click"/>
+            </StackPanel>
         </Grid>
     </StackPanel>
 </Window>
