--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmCalculoICMS.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmCalculoICMS.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CalculoPrecoVenda.frmCalculoICMS"
+﻿<Window x:Class="CalculoPrecoVenda.View.frmCalculoICMS"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
