--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmDespesasOperacionais.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmDespesasOperacionais.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CalculoPrecoVenda.frmDespesasOperacionais"
+﻿<Window x:Class="CalculoPrecoVenda.View.frmDespesasOperacionais"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
         <local:NumberFormatter x:Key="myNumberFormatter"/>
     </Window.Resources>
     <StackPanel Margin="10" HorizontalAlignment="Center">
-        <GroupBox Name="grpPrecoVenda" Header="Despesas Operacionais" Width="800" Height="300" Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <GroupBox Name="grpPrecoVenda" Header="Despesas Operacionais" Width="800" Height="300">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35"/>
