--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/MainWindow.xaml
@@ -13,9 +13,9 @@
     </Window.Resources>
 
     <StackPanel Margin="5">
-        <Label Content="Cálculo de Preço de Venda" FontFamily="SegoeUI" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center" Margin="5" Grid.Row="0" />
+        <Label Content="Cálculo de Preço de Venda" FontFamily="SegoeUI" FontSize="20" FontWeight="DemiBold" HorizontalAlignment="Center" Margin="5"/>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0,5,5" >
+        <StackPanel Orientation="Horizontal" Margin="5,0,5,5" >
 
             <GroupBox Name="grpFornecedor" Header="Fornecedor" Height="240" Width="250" Margin="10,0,20,0">
                 <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
@@ -100,18 +100,18 @@
         <Grid  Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="300"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3"
+            <GroupBox Name="grpCusto" Header="Custos" Width="500" Height="430" Margin="10,0,20,0" Grid.Row="0" Grid.Column="0" Grid.RowSpan="4"
                       VerticalAlignment="Top" HorizontalAlignment="Left">
                 <Grid Margin="5,0,0,0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
@@ -238,21 +238,22 @@
                     <TextBox Grid.Row="6" Grid.Column="3" Name="txtLucro3" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="6" Grid.Column="4" Name="txtLucro4" VerticalAlignment="Center" Margin="5,0"/>
                     <TextBox Grid.Row="6" Grid.Column="5" Name="txtLucro5" VerticalAlignment="Center" Margin="5,0"/>
-
-
                 </Grid>
             </GroupBox>
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0">
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top" >
                 <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="0,10,10,0" Click="btnImpostosFederais_Click"/>
                 <Button Name="btnIcms" Content="ICMS sobre a Venda" Width="120" Height="35" VerticalAlignment="Top" Margin="20,10,10,0" Click="btnIcms_Click_1"/>
                 <Button Name="btnDespOp" Content="Desp Operacionias" Width="120" Height="35" VerticalAlignment="Top" Margin="20,10,10,0" Click="btnDespOp_Click_2"/>
                 <Button Name="btnCálcular" Content="CALCULAR" Width="120" Height="35" VerticalAlignment="Top" Margin="240,10,10,0"/>
             </StackPanel>
-            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal"  VerticalAlignment="Top">
                 <Button Name="btnCadastroUf" Content="Cadastro UF" Width="120" Height="35" VerticalAlignment="Top" Margin="0,0,10,0" Click="btnCadastroUf_Click"/>
                 <Button Name="btnCadastroNcm" Content="Cadastro NCM" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnCadastroNcm_Click"/>
                 <Button Name="btnSobre" Content="Sobre" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnSobre_Click"/>
             </StackPanel>
+            <StatusBar Grid.Row="4" Grid.Column="1" VerticalAlignment="top" Margin="0,10,0,0">
+                <TextBlock Text=""/>
+            </StatusBar>
         </Grid>
     </StackPanel>
 </Window>
