--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
@@ -12,20 +12,54 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Padding="2"/>
+        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TextoPesquisa, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" Padding="2"/>
         <Button Grid.Row="0" Grid.Column="1" Content="Pesquisar" Command="{Binding PesquisarCommand}" Padding="2" Width="65" Margin="5,0,0,0"/>
-        <!--<DataGrid Grid.Row="1" Grid.ColumnSpan="2"
+        <DataGrid Grid.Row="1" Grid.ColumnSpan="2"
+                  AutoGenerateColumns="False"
+                  HeadersVisibility="Column"
                   ItemsSource="{Binding Ncms}"
-                  SelectionMode="Single">
-        </DataGrid>-->
+                  SelectedItem=""
+                  SelectionMode="Single"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  IsReadOnly="True"
+                  AlternationCount="2"
+                  RowBackground="Aqua"
+                  AlternatingRowBackground="White">          
 
-        <ListBox Name="listNcm" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" ItemsSource="{Binding Ncms}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding NcmId}" MinWidth="100" Header="Cod" />
+                <DataGridTextColumn Binding="{Binding CodNcm}" MinWidth="100" Header="NCM" />
+                <DataGridTextColumn Binding="{Binding NomeNcm}" MinWidth="300" Header="Nome NCM " />
+                <DataGridTextColumn Binding="{Binding ImpImportacao, StringFormat=N}" MinWidth="50" Header="II" />
+                <DataGridTextColumn Binding="{Binding Ipi, StringFormat=N}" MinWidth="50" Header="IPI" />
+            </DataGrid.Columns>
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+            <DataGrid.CellStyle>
+                <Style x:Name="Cell" TargetType="{x:Type DataGridCell}">
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.CellStyle>
+
+        </DataGrid>
+        <Button Grid.Row="2" Name="btnOK" Content="OK" Width="120" Height="35" VerticalAlignment="Top" Margin="20,20,10,0"/>
+
+        <!--<ListBox Name="listNcm" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" ItemsSource="{Binding Ncms}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -33,6 +67,6 @@
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-        </ListBox>
+        </ListBox>-->
     </Grid>
 </Window>
