--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarNcm.xaml
@@ -25,14 +25,15 @@
                   AutoGenerateColumns="False"
                   HeadersVisibility="Column"
                   ItemsSource="{Binding Ncms}"
-                  SelectedItem=""
+                  SelectedItem="{Binding SelectedIndex, Mode=TwoWay}"
                   SelectionMode="Single"
                   CanUserAddRows="False"
                   CanUserDeleteRows="False"
                   IsReadOnly="True"
                   AlternationCount="2"
                   RowBackground="Aqua"
-                  AlternatingRowBackground="White">          
+                  AlternatingRowBackground="White"
+                  Name="dtgNcm">          
 
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding NcmId}" MinWidth="100" Header="Cod" />
@@ -57,7 +58,7 @@
             </DataGrid.CellStyle>
 
         </DataGrid>
-        <Button Grid.Row="2" Name="btnOK" Content="OK" Width="120" Height="35" VerticalAlignment="Top" Margin="20,20,10,0"/>
+        <Button Grid.Row="2" Name="btnOK" Content="OK" Command="{Binding SelecionarCommand}" Width="120" Height="35" VerticalAlignment="Top" Margin="20,20,10,0" Click="btnOK_Click"/>
 
         <!--<ListBox Name="listNcm" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" ItemsSource="{Binding Ncms}">
             <ListBox.ItemTemplate>
